CHANGES.txt - 2009-01-14
------------------------

CHANGES IN CUPS V1.4b3

	- Documentation fixes (STR #3044, STR #3057)
	- The ppdi utility did not work.
	- The web interface no longer uses multi-part output with old or broken
	  web browsers (STR #3049)
	- CUPS now conforms to the draft IPP/2.0 and IPP/2.1 specification.
	- Added a new cupsGetConflicts() API to get a list of conflicting
	  options.
	- The PPD compiler didn't localize options or choices that did not
	  have associated translation text (STR #3045)
	- Updated the Spanish localization (STR #3043)
	- Fixed build problems (STR #3040, STR #3047)
	- cupsResolveConflicts() did not resolve using the default option
	  choice in some cases due to the mirror UIConstraints that are
	  present in most PPD files.
	- The scheduler did not honor MIME type priorities.
	- The commandtops filter incorrectly used the JCLBegin code to end
	  its jobs.
	- The default BrowseLocalProtocols value was not set properly.
	- Since the commandtops filter does not actually support ReportLevels
	  all on its own, don't list that printer command by default for PS
	  printers.
	- The scheduler did not give filters a chance to log errors or update
	  printer attributes when a job was canceled.
	- The scheduler did not clear the "connecting-to-device" reason keyword
	  when a job finished.


CHANGES IN CUPS V1.4b2

	- Documentation updates (STR #2983, STR #2998, STR #3021)
	- The cupstestppd utility now validates the FileVersion and
	  FormatVersion values in PPD files.
	- The default cupsd.conf file did not reflect the
	  --with-local-protocols value set at compile-time (STR #3037)
	- The cupsGetPPD* APIs now create symlinks to local PPD files
	  rather than copying them whenever possible.
	- Various performance optimizations in the string pool, dests, and
	  options implementations.
	- The cupsGetDests* APIs now return the marker and printer-commands
	  attributes.
	- Side-channel SNMP lookups would not work when cupsSNMPSupplies